--- a/app/src/main/res/layout/activity_team_create.xml
+++ b/app/src/main/res/layout/activity_team_create.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/create_teamname"
         android:layout_width="213dp"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/t_round" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/create_team_des"
         android:layout_width="214dp"
         android:layout_height="113dp"
         android:layout_marginStart="60dp"
@@ -114,7 +114,7 @@
         android:text="@string/cancel"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintTop_toBottomOf="@+id/create_team_des" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -242,7 +242,7 @@
         android:layout_marginStart="34dp"
         android:layout_marginTop="37dp"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
+        app:layout_constraintTop_toBottomOf="@+id/create_team_des"
         app:srcCompat="@drawable/ic_baseline_image_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
