--- a/app/src/main/res/layout/activity_team_home.xml
+++ b/app/src/main/res/layout/activity_team_home.xml
@@ -179,7 +179,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="403dp" />
+            android:layout_height="300dp" />
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -187,8 +187,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="345dp"
         android:layout_height="106dp"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="220dp">
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="54dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic7">
 
         <TextView
             android:id="@+id/textView7"
@@ -206,6 +208,7 @@
             android:layout_height="55dp"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="25dp"
+            android:onClick="user_team_create"
             app:srcCompat="@drawable/ic_baseline_add_circle_24" />
 
     </androidx.cardview.widget.CardView>
