--- a/app/src/main/res/layout/activity_team_update.xml
+++ b/app/src/main/res/layout/activity_team_update.xml
@@ -242,7 +242,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cr_tournamet_topic" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/update_teamname"
         android:layout_width="213dp"
         android:layout_height="35dp"
         android:layout_marginStart="60dp"
@@ -255,7 +255,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName6"
+        android:id="@+id/update_team_des"
         android:layout_width="214dp"
         android:layout_height="113dp"
         android:layout_marginStart="60dp"
@@ -277,7 +277,7 @@
         android:text="Cancel"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
+        app:layout_constraintTop_toBottomOf="@+id/create_team_des" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
